# TUIcan

./: LICENSE.txt  README.md  pyproject.toml
examples/: buttonPressedCounter.py  components_showcase.py  deeplink.py  dynamic_layout.py  hello_world.py  hello_world].py  multiple_screens.py  press_counter.py
src/: application.py
src/components/: button.py  checkbox.py  component.py  input.py  screen.py
src/tuican/: __init__.py  application.py  context.py
src/tuican/components/: __init__.py  button.py  checkbox.py  component.py  hline.py  input.py  screen.py
src/tuican/validation/: __init__.py
src/validation/: __init__.py
